transferred all the styles files into the styles folder

--- a/src/styles/1-abstracts/_mixins.scss
+++ b/src/styles/1-abstracts/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin media($breakpoint) {
+@mixin breakpoint($breakpoint) {
   @if $breakpoint == phone {
     @media (max-width: $phone) {
       @content;
@@ -24,7 +24,13 @@
   }
 }
 
-@mixin align-center {
+@mixin grid-center {
   display: grid;
   place-items: center;
+}
+
+@mixin flex-place-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
