--- a/src/styles/1-abstracts/_variables.scss
+++ b/src/styles/1-abstracts/_variables.scss
@@ -1,5 +1,11 @@
 // Colors
 $main-bg-color: #fafafa;
+$color-primary-orange: #da3b42;
+$color-primary-black: #1e1d1e;
+
+// Gradients
+$main-gradient: linear-gradient(to right, #da3b42, #f5745d);
+$image-overlay: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 
 // Typography
 $font-family: "Poppins", sans-serif;
