--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,39 @@
+// Abstract
 @import "1-abstracts/variables";
 @import "1-abstracts/mixins";
 
+// Base
 @import "2-base/base";
 @import "2-base/typography";
 @import "2-base/animations";
 
+// Layout
+@import "3-layout/navbar";
+@import "3-layout/grid";
+
+// Components
+@import "4-components/cartItem";
+@import "4-components/orderSummary";
+
+@import "4-components/product";
+@import "4-components/productList";
+@import "4-components/detailProductInfo";
+@import "4-components/sizeButtonGroup";
+
+@import "4-components/formFields";
+@import "4-components/signInForm";
+@import "4-components/registerForm";
+
+@import "4-components/imageComposition";
 @import "4-components/scrollIndicator";
+@import "4-components/loader";
+@import "4-components/seperator";
+
+
+// Pages
+@import "5-pages/home";
+@import "5-pages/errorPage";
+@import "5-pages/detailsPage";
+@import "5-pages/registerPage";
+@import "5-pages/cartPage";
+@import "5-pages/signInPage";
