--- a/src/styles/5-pages/_cartPage.scss
+++ b/src/styles/5-pages/_cartPage.scss
@@ -1,10 +1,9 @@
 .cart {
   &__hero {
-    display: grid;
+    @include grid-center;
     text-align: center;
-    place-items: center;
     height: 35vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    background: $image-overlay,
       url("https://cdn.pixabay.com/photo/2015/10/12/15/18/clothing-store-984396_1280.jpg");
     background-size: cover;
     background-position: center;
